# chess-engine

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chess  chess-engine  cmake_install.cmake
PythonGUI/: board.py  chess.py  chess.spec  getImages.py  pieces.py  ping.cp313-win_amd64.pyd  ping.cpp  position.pxd  pyposition.c  pyposition.cpp  pyposition.pyx  setup.py  values.py
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
inc/: helper.hpp  magic.hpp  moves.hpp  perft.hpp  position.hpp  standards.hpp
src/: helper.cpp  magic.cpp  main.cpp  moves.cpp  perft.cpp  pieces.cpp  position.cpp
test/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
